# ok-msg-desktop

./: CMakeLists.txt  README.md
.github/workflows/: mac-arm.yml  mac-x64.yml  ubuntu.yml  win.yml
cmake/: init_target.cmake
docs/buildings/: fedora.md  macos-arm64.md  macos.md  ubuntu.md  windows.md
src/: Bus.h  CMakeLists.txt  application.cpp  application.h  launcher.cpp
src/UI/: WindowManager.cpp  WindowManager.h
src/base/: OkAccount.cpp  OkAccount.h  basic_types.h  jid.cpp  jid.h  qtsizeutils.cpp  qtsizeutils.h  shadowbackground.cpp  (+1 more)
src/lib/: CMakeLists.txt
src/lib/audio/backend/: openal.cpp
src/lib/messenger/: IM.cpp  IM.h  IMCall.cpp  IMCall.h  IMFile.cpp  IMFile.h  IMFriend.h  IMMeet.cpp  IMMeet.h  IMMessage.h  Messenger.cpp  Messenger.h  messenger.cpp  messenger.h
src/lib/plugin/: pluginmanager.cpp  pluginmanager.h
src/lib/session/: AuthSession.cpp  profile.cpp  profile.h
src/lib/storage/: StoreageManager.cpp
src/lib/storage/db/: rawdatabase.cpp
src/lib/storage/settings/: OkSettings.cpp  OkSettings.h  applicationinfo.cpp  style.cpp  style.h  translator.cpp  translator.h
src/lib/thread/: CMakeLists.txt  TheadPool.cpp  TheadPool.h
src/lib/ui/: CMakeLists.txt  OWindow.cpp  OWindow.h  ui.cpp  ui.h
src/lib/ui/res/: uiRes.qrc
src/lib/ui/widget/: OMediaConfigWidget.cpp  OVideoOutputWidget.cpp  OWidget.cpp
src/lib/ui/widget/tools/: CroppingLabel.cpp  CroppingLabel.h  MaskablePixmap.cpp  MaskablePixmap.h  PopupMenuComboBox.cpp  RoundedPixmapLabel.cpp  RoundedPixmapLabel.h
src/lib/video/: cameradevice.cpp  camerasource.cpp  videomode.h
(+341 files in other folders)
